# wallpaper-maker

./: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  LICENSE  MainWindow.cpp  MainWindow.h  README.md  WallpaperMaker.desktop  install.sh
src/: ImageProcessor.cpp  ImageProcessor.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
